Add post nodejs codeNeed fixing because doesn't work

--- a/intro/index.html
+++ b/intro/index.html
@@ -8,6 +8,11 @@
     </head>
     <body>
         <h1>NodeJs</h1>
+        <form action="post">
+            <input type="number" name="number1" id="number1" value="" placeholder="Number 1">
+            <input type="number" name="number2" id="number2" value="" placeholder="Number 2">
+             <button type="submit">Calculate</button>
+        </form>
         <p>hi. just something to try on.</p>
     </body>
 </html>
