--- a/intro/index.html
+++ b/intro/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>A sample html</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-        <h1>NodeJs</h1>
-        <form action="post">
-            <input type="number" name="number1" id="number1" value="" placeholder="Number 1">
-            <input type="number" name="number2" id="number2" value="" placeholder="Number 2">
-             <button type="submit">Calculate</button>
-        </form>
-        <p>hi. just something to try on.</p>
-    </body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <h1>CALCULATOR</h1>
+    <form action="/" method="post">
+      <input type="text" name="n1" placeholder="First Number" />
+      <input type="text" name="n2" placeholder="Second Number" />
+      <button type="submit" name="submit">Calculate</button>
+    </form>
+  </body>
 </html>
